--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ asgiref==3.8.1
 Django==5.0.4
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+gunicorn==20.1.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-dotenv==1.0.1
 sqlparse==0.5.0
 typing_extensions==4.11.0
+whitenoise==6.4.0
