--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,6 @@
-DEV=true
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+DEV='true'
+POSTGRES_DB='postgres'
+POSTGRES_USER='postgres'
+POSTGRES_PASSWORD='postgres'
+POSTGRES_HOST='db'
+POSTGRES_PORT='5432'
